# uipath_enterprise_benchmark

./: README.md
DeterministicBenchmark/: .dockerignore  .gitignore  deterministic_bench.json  extract.sh  index.html  package-lock.json  package.json  run.sh  tailwind.config.js  tsconfig.json  vite.config.ts
DeterministicBenchmark/apps/: business-process-tasks.tsx  combo-box-tasks.tsx  concur-tasks.tsx  copy-paste-tasks.tsx  date-pickers.tsx  input-boxes.tsx  kanban-tasks.tsx  kanban.jsx  navigation-hierarchical-spatial.tsx  navigation-lists-tables.tsx  navigation-search-interaction.tsx  salesforce-tasks.tsx  sap-stock-overview-tasks.tsx  time-pickers.tsx  workday-tasks.tsx  workday.jsx
DeterministicBenchmark/docker/: bechmark.dockerfile  xfce.dockerfile
DeterministicBenchmark/eval/: pyproject.toml
DeterministicBenchmark/eval/uitask/: container.py  utils.py
DeterministicBenchmark/eval/uitask/computer_use/: README.md  __init__.py  act.py
DeterministicBenchmark/eval/uitask/computer_use/byom/uipath/: .env.example  agent.py  utils.py
DeterministicBenchmark/eval/uitask/environment/: README.md  container.py
DeterministicBenchmark/eval/uitask/evaluate/: README.md  process_recording.py  run.py  score.py
DeterministicBenchmark/eval/uitask/evaluate/byom/uipath/: screenplay.py
DeterministicBenchmark/eval/uitask/models/: display.py  pointer.py
DeterministicBenchmark/eval/uitask/tools/: __init__.py  base.py  keys.py  pointer.py  wait.py
DeterministicBenchmark/eval/uitask/vnc/: README.md  __init__.py  client.py  keysymdef.py  protocol.py  rfb_messages.py  ws.py
DeterministicBenchmark/eval/uitask/vnc/recording/: action_screenshots_template.html  actions.py  process_rfb.py  replay.py  service.py
DeterministicBenchmark/nginx/: default.conf  nginx.conf
DeterministicBenchmark/prompt/: PROMPT.md
DeterministicBenchmark/scripts/: xfce-startup.sh
DeterministicBenchmark/src/: App.tsx  ConsoleFilter.ts  HumanEval.tsx  (+4 more)
(+132 files in other folders)
